Befure uniting Add and Edit movie

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,7 +33,8 @@
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".EditProfileActivity" />
         <activity android:name=".UsersAdminActivity" />
-        <activity android:name=".AddMovieFromTMDBActivity"></activity>
+        <activity android:name=".AddMovieFromTMDBActivity" />
+        <activity android:name=".HistoryActivity"></activity>
     </application>
 
 </manifest>
