--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,42 +7,56 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/icon"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/icon"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MoviesActivity"
-            android:parentActivityName=".LoginActivity"/>
+        <activity
+            android:name=".MoviesActivity"
+            android:parentActivityName=".LoginActivity" />
         <activity
             android:name=".LoginActivity"
             android:label="@string/app_name">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".LoginActivity" />
         </activity>
-        <activity android:name=".RegisterActivity"
-            android:parentActivityName=".LoginActivity"/>
-        <activity android:name=".MovieDetailActivity"
-            android:parentActivityName=".MoviesActivity"/>
-        <activity android:name=".AddMovieActivity"
-            android:parentActivityName=".MoviesActivity"/>
-        <activity android:name=".EditMovieActivity"
-            android:parentActivityName=".MoviesActivity"/>
+        <activity
+            android:name=".RegisterActivity"
+            android:parentActivityName=".LoginActivity" />
+        <activity
+            android:name=".MovieDetailActivity"
+            android:parentActivityName=".MoviesActivity" />
+        <activity
+            android:name=".AddMovieActivity"
+            android:parentActivityName=".MoviesActivity" />
+        <activity
+            android:name=".EditMovieActivity"
+            android:parentActivityName=".MoviesActivity" />
         <activity
             android:name=".CategoriesAdminActivity"
             android:label="@string/title_activity_categories_admin"
             android:parentActivityName=".MoviesActivity"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".EditProfileActivity"
-            android:parentActivityName=".MoviesActivity"/>
-        <activity android:name=".UsersAdminActivity"
-            android:parentActivityName=".MoviesActivity"/>
-        <activity android:name=".AddMovieFromTMDBActivity"
-            android:parentActivityName=".AddMovieActivity"/>
-        <activity android:name=".HistoryActivity"
-            android:parentActivityName=".MoviesActivity"></activity>
+        <activity
+            android:name=".AddMovieFromTMDBActivity"
+            android:parentActivityName=".AddMovieActivity" />
+        <activity
+            android:name=".HistoryActivity"
+            android:parentActivityName=".MoviesActivity" />
+        <activity
+            android:name=".SplashActivity"
+            android:theme="@style/SplashTheme">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".SettingsActivity"
+            android:label="@string/title_activity_settings"></activity>
     </application>
 
 </manifest>
